Fixed user-visible rendering problem on quick-access-panel

--- a/common/common.scss
+++ b/common/common.scss
@@ -764,7 +764,7 @@ to {opacity:100%;}
 }
 
 .user-menu .quick-access-panel li{
-    margin-bottom:1px;
+    margin: 1px 0 1px 0;
     border-radius: 15px;
     transition: all 0.15s ease-out;
 }
